--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,9 +1,9 @@
-.header{
+.top_header{
   &__wrapper{
     width: 1020px;
     margin: auto;
     padding-top: 8px; 
-    &__top{
+    .header-top{
       align-items: center;
       display: flex;
       &__logo{
@@ -40,7 +40,7 @@
         }
       }
     }
-    &__bottom{
+    .header-bottom{
       margin-top: 8px;
       height: 44px;
       position: relative;
