--- a/app/views/top/_header.html.haml
+++ b/app/views/top/_header.html.haml
@@ -2,7 +2,7 @@
   .top_header__wrapper
     .header-top
       %img.header-top__logo{src: "assets/mypage/logo.svg"} 
-      %form.header-yop__search-box
+      %form.header-top__search-box
         %input.header-top__search-box__input-box{type: "text", placeholder: "何かお探しですか？"}
         %i.fa.fa-search
     .header-bottom
