--- a/app/views/top/_footer.html.haml
+++ b/app/views/top/_footer.html.haml
@@ -1,4 +1,3 @@
-    
 %aside.app-banner
   .app-banner__pc
     .app-banner__pc__inner
@@ -35,11 +34,9 @@
         %li
           メルカリロゴ利用ガイドライン
         %li.footer-social-link
-          %a{:href => "https://twitter.com/mercari_jp", :target => "_blank"}
-            %i.icon-twitter
-        %li.footer-social-link
-          %a{:href => "https://www.facebook.com/mercarijp", :target => "_blank"}
-            %i.icon-facebook
+          %i.fab.fa-twitter
+          %i.fab.fa-facebook-square
+
     .footer-cell
       %h2.footer-head ヘルプ＆ガイド
       %ul
