--- a/app/views/top/_footer.html.haml
+++ b/app/views/top/_footer.html.haml
@@ -19,7 +19,7 @@
 
 
 %footer.global-footer
-  %nav.clearfix
+  %nav.info
     .footer-cell
       %h2.footer-head メルカリについて
       %ul
@@ -58,28 +58,31 @@
           メルカリボックス
     .footer-cell.full-width
       %h2.footer-head プライバシーと利用規約
-      .inner-footer-cell
-        %ul
-          %li
-            プライバシーポリシー
-          %li
-            メルカリ利用規約
-          %li
-            あんしんスマホサポート制度に関する利用特約
-          %li
-            コンプライアンスポリシー
-      .inner-footer-cell
-        %ul
-          %li
-            個人データの安全管理に係る基本方針
-          %li
-            特定商取引に関する表記
-          %li
-            資金決済法に基づく表示
-          %li
-            法令順守と犯罪抑止のために
-          %li
-            返品・返金ポリシー
+      .inner-footer
+        .inner-footer-cell
+          %ul
+            %li
+              プライバシーポリシー
+            %li
+              メルカリ利用規約
+            %li
+              あんしんスマホサポート制度に関
+              %br する利用特約
+            %li
+              コンプライアンスポリシー
+
+        .inner-footer-cell
+          %ul
+            %li
+              個人データの安全管理に係る基本方針
+            %li
+              特定商取引に関する表記
+            %li
+              資金決済法に基づく表示
+            %li
+              法令順守と犯罪抑止のために
+            %li
+              返品・返金ポリシー
     .footer-cell.footer-nav-lang
       %h2.footer-head 国
       %ul
