--- a/app/views/top/_footer.html.haml
+++ b/app/views/top/_footer.html.haml
@@ -13,12 +13,8 @@
             = image_tag("app-store.svg")
           %li
             = image_tag("google-play.svg")
-            -# %a{:href => "https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja", :target => "_blank"}
-              %img{:alt => "", :height => "40", :src => "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?1905591235", :width => "133",class: "googleplay"}/
       %li.figure
         = image_tag("download_content_pc.png")
-        -# %img{:alt => "", :height => "262.63", :src => "//www-mercari-jp.akamaized.net/assets/img/common/jp/download_content_pc.png?1905591235"}/
-
 
 %footer.global-footer
   %nav.info
@@ -94,7 +90,9 @@
           United States
 
   .footer-bottom
-    %a.footer-logo{:href => "https://www.mercari.com/jp/"}
-      %img{:alt => "mercari", :height => "33", :src => "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?1905591235", :width => "124"}/
+    = image_tag("logo-white.svg")
+
+    -# %a.footer-logo{:href => "https://www.mercari.com/jp/"}
+      -# %img{:alt => "mercari", :height => "33", :src => "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?1905591235", :width => "124"}/
     %span.footer-copyright
       %small © 2019 Mercari
