--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,5 @@
 @import "font-awesome";
 @import "./top/_content";
 @import "slick";
-@import "./products/products"
+@import "./products/products";
+@import "./users/index"
