--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,3 +1,198 @@
 // Place all the styles related to the top controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+body{
+  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
+  .registration_login-container{
+    background-color:rgb(245, 245, 245);
+    text-align: center;
+    box-sizing: border-box;
+    .registration_login-header{
+      height: 128px;
+      font-size: 14px;
+      color: #333333;
+      h1{
+        display: inline-block;
+        margin: 40px 0 0;
+        a{
+          width: 185px;
+          height: 49px;
+          line-height: 49px;
+          display: inline-block;
+          margin: 0 8px 0 0;
+          img{
+            width: 185px;
+            height: 49px;
+          }
+        }
+      }
+    }
+  }
+
+  .btn-default{
+    color: #fff;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: 328px;
+    height: 50px;
+    line-height: 48px;
+    font-size: 14px;
+  }
+
+  .input-default {
+    height: 48px;
+    padding: 10px 16px 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    background: #fff;
+    line-height: 1.5;
+    font-size: 16px;
+}
+  
+  .registration-main{
+    display: block;
+    height: 731px;
+    .login__box{
+      max-width: 456px;
+      height: 731px;
+      margin: 0 auto;
+      
+      &--account-blue{
+        height: 144px;
+        background-color: white;
+        padding: 40px 64px;
+        text-align: center;
+        p{
+          font-size: 14px;
+          color: #333333;
+        }
+        a{
+          margin: 8px auto 0;
+          width: 328px;
+          display: block;
+          border: 1px solid #0099e8;
+          background: #0099e8;
+          color: #fff;
+          line-height: 40px;
+          text-decoration: none;
+          font-size: 14px;
+          
+        }
+      }
+      &--social{
+        border-top: 1px solid #eee;
+        height: 181px;
+        background: white;
+        padding: 32px 64px;
+
+        
+        .btn-sns-facebook{
+          background: #385185;
+          i{
+            height: 26px;
+            width: 26px;
+          }
+        }
+        
+        .btn-sns-google{
+          color: black;
+          background: #fffffe;
+          margin-top: 16px;
+        }
+      }
+      
+      form{
+        background: #fff;
+        padding: 24px 64px 32px;
+        height: 406px;
+        .login__box--form{
+          input{
+            width: 328px;
+            height: 48px;
+          }
+          .form-password{
+            margin-top: 24px;
+          }
+          .from_captcha{
+            width: 328px;
+            height: 78px;
+            margin-top: 24px;
+            img{
+              height: 74px;
+              width: 300px;
+              display: block;
+              border: 1px solid #ccc;
+            }
+          }
+        }
+        .login-switch{
+          display: block;
+          margin: 0 auto;
+          width: 328px;
+          height: 50px;
+          margin-top: 24px;
+          background: #ea352d;
+        }
+        a{
+          width: 328px;
+          font-size: 14px;
+          cursor: pointer;
+          display: block;
+          text-align: left;
+          margin: 40px 0 0;
+          color: #0099e8;
+          text-decoration: none;
+        }
+        a:hover{
+          text-decoration: underline;
+
+        }
+      }
+    }
+  }
+  .registration_login-footer{
+    width: 456px;
+    height: 220px;
+    margin: 0 auto;
+    padding: 40px 0;
+    .clearfix{
+      
+      li{
+        display: inline-block;
+        margin-right: 10px;
+        a{
+          text-decoration: none;
+          font-size: 12px;
+        }
+        a:visited{
+          color: #333333;
+        }
+      }
+    }
+    a.registration-logo{
+      display: block;
+      width: 80px;
+      height: 65px;
+      margin: 40px auto 0;
+      img{
+        width: 80px;
+        height: 65px;
+      }
+    }
+    p{
+      margin: 8px 0 0;
+      font-size: 14px;
+      small{
+        font-size: 12px;
+        color: #333333;
+        
+      }
+    }
+  }
+}
+  
+  
+  
