--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,5 @@
 @import "font-awesome";
 @import "./top/_content";
 @import "slick";
-@import "mixin"
+@import "mixin";
 @import "./products/products"
