--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,5 @@
 @import "./top/_content";
 @import "slick";
 @import "./products/products";
-@import "./users/index"
+@import "./users/index";
+@import "registration_login"
